k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  labels:
    app: client

spec:
  selector:
    matchLabels:
      app: client
  replicas: 3
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client-pod
          image: azalurg/react-todo-app:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
