k8s/client-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service-nodeport

spec:
  selector:
    app: client

  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080

  type: NodePort
