k8s/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  labels:
    app: client

spec:
  selector:
    matchLabels:
      app: client
  replicas: 3
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client-pod
          image: azalurg/react-todo-app:1.2.5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: client-service-clusterip

spec:
  type: ClusterIP
  selector:
    app: client
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
