k8s/nodeports.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service-nodeport

spec:
  selector:
    app: mongo

  ports:
  - port: 27017
    targetPort: 27017
    nodePort: 30270

  type: NodePort

---

apiVersion: v1
kind: Service
metadata:
  name: client-service-nodeport

spec:
  type: NodePort
  selector:
    app: client

  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080

---

apiVersion: v1
kind: Service
metadata:
  name: redis-service-nodeport

spec:
  selector:
    app: redis

  ports:
  - port: 6379
    targetPort: 6379
    nodePort: 30379

  type: NodePort

---

apiVersion: v1
kind: Service
metadata:
  name: server-service-nodeport

spec:
  selector:
    app: server

  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30500

  type: NodePort
