k8s/redis-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service-clusterip
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP
