k8s/server-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service-clusterip
spec:
  selector:
    app: server
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
