k8s/ingres.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:

  ingressClassName: ingress
  rules:
  - host: "todo.app.com"
    http:
      paths:
        - path: /?(.*)
          pathType: Prefix
          backend:
            service:
              name: client-service-clusterip
              port:
                number: 80
            
        # - path: /api/?(.*)
        #   pathType: Prefix
        #   backend:
        #     service:
        #       name: server-service-clusterip
        #       port:
        #         number: 5000
